[project]
name = "HTML-Processor-Backend"
version = "0.1.0"
description = "Fastapi server powered by Ollama to process the webpage data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "fastapi>=0.115.12",
    "langchain-ollama>=0.3.3",
    "openai>=1.79.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "uuid>=1.30",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
